# ocaml-gen

./: .gitignore  .ocamlformat  .ocamlformat-ignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  crates.js  dune-project  help.html  index.html  ocamlgen-test.opam  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/actions/build-and-test/: action.yml
.github/workflows/: build-macos.yml  build-ubuntu.yml  ci.yml  gh-pages.yml  publish.yml
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/ocaml/value/: trait.FromValue.js  trait.IntoValue.js
implementors/ocaml_gen/: trait.OCamlBinding.js  trait.OCamlDesc.js
main/: all.html  enum.ProcMacroHack.html  fn.main.html  index.html  macro.proc_macro_call.html  sidebar-items.js
ocaml-gen/: Cargo.toml  README.md
ocaml-gen/derive/: Cargo.toml  README.md
ocaml-gen/derive/src/: lib.rs
ocaml-gen/src/: conv.rs  lib.rs
ocaml_derive/: attr.func.html  derive.CustomType.html  derive.Enum.html  derive.Struct.html  index.html  sidebar-items.js
ocaml_gen/: all.html  attr.func.html  derive.CustomType.html  derive.Enum.html  derive.Struct.html  index.html  macro.const_random.html  macro.decl_fake_generic.html  macro.decl_func.html  macro.decl_module.html  macro.decl_type.html  macro.decl_type_alias.html  macro.paste.html  sidebar-items.js  struct.Env.html  trait.OCamlBinding.html  trait.OCamlDesc.html
ocaml_gen/conv/: index.html
ocaml_gen/prelude/: index.html  macro.decl_fake_generic.html  macro.decl_func.html  macro.decl_module.html  macro.decl_type.html  macro.decl_type_alias.html  sidebar-items.js
ocaml_gen_derive/: all.html  attr.func.html  derive.CustomType.html  derive.Enum.html  derive.Struct.html  index.html  sidebar-items.js
ocamlgen_test_stubs/: all.html  fn.create_toyota.html  fn.create_toyota_to_ocaml.html  fn.fn_five_parameters.html  fn.fn_five_parameters_to_ocaml.html  fn.fn_four_parameters.html  fn.fn_four_parameters_to_ocaml.html  fn.fn_one_parameter.html  fn.fn_one_parameter_to_ocaml.html  fn.fn_six_parameters.html  fn.fn_six_parameters_bytecode.html  fn.fn_six_parameters_to_ocaml.html  fn.fn_three_parameters.html  fn.fn_three_parameters_to_ocaml.html  fn.fn_two_parameters.html  fn.fn_two_parameters_to_ocaml.html  fn.new.html  fn.new_to_ocaml.html  fn.pack_present.html  fn.pack_present_to_ocaml.html  fn.print.html  fn.print_to_ocaml.html  fn.test_add_i32.html  fn.test_add_i32_to_ocaml.html  fn.test_add_usize.html  fn.test_add_usize_to_ocaml.html  fn.test_bytes_get.html  fn.test_bytes_get_to_ocaml.html  fn.test_get_ascii_code.html  fn.test_get_ascii_code_to_ocaml.html  index.html  sidebar-items.js  struct.Car.html  struct.Package.html  struct.SingleTuple.html
search.desc/ocaml_gen/: ocaml_gen-desc-0-.js
search.desc/ocaml_gen_derive/: ocaml_gen_derive-desc-0-.js
search.desc/ocamlgen_test_stubs/: ocamlgen_test_stubs-desc-0-.js
search.index/: 1db995aa51f7.js  25a35d37d127.js  458fff6f12f1.js  4e3c0deff8ff.js  6fb546205205.js  71fcaf8c3999.js  7476355a0306.js  79613d74585d.js  7ef0d540b131.js  root.js
search.index/crateNames/: 2e8d77f48f36.js
search.index/desc/: e28c2d04dea2.js
search.index/entry/: c35d5a0e3a96.js
search.index/function/: 95c1352c5dad.js
search.index/generic_inverted_index/: a5c4dfe3ab61.js
search.index/name/: 34bb208db081.js
search.index/normalizedName/: a092cb2c804e.js
search.index/path/: 8756b3612308.js
search.index/type/: bdf4cd0ce028.js
src/main/: main.rs.html
src/ocaml_derive/: lib.rs.html
src/ocaml_gen/: conv.rs.html  lib.rs.html
src/ocaml_gen_derive/: lib.rs.html
src/ocamlgen_test_stubs/: lib.rs.html
tests/: README.md  bindings.ml  dune  expected_bindings.ml  lib.ml  ocamlgen_test.ml
tests/ocamlgen_test_stubs/: Cargo.toml
tests/ocamlgen_test_stubs/.cargo/: config
tests/ocamlgen_test_stubs/src/lib/: lib.rs
tests/src/: lib.rs  main.rs
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/ocaml/value/: trait.FromValue.js  trait.IntoValue.js  trait.ToValue.js
trait.impl/ocaml_gen/: trait.OCamlBinding.js  trait.OCamlDesc.js
