[workspace]
members = [
    "ocaml-gen",
    "ocaml-gen/derive",
    "tests/ocamlgen_test_stubs"
]
resolver = "2"

[workspace.dependencies]
convert_case = "0.6.0"
ocaml = "0.22.4"
const-random = "0.1.13"
paste = "1.0.9"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }
