[package]
name = "ocaml-gen"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "A library for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
doctest = false

[dependencies]
ocaml-gen-derive = { path = "./derive" }
ocaml = "0.22.4"
const-random = "0.1.13"
paste = "1.0.9"

[features]
without-ocamlopt = [
  "ocaml/without-ocamlopt",
]
