[package]
name = "ocaml-gen"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "A library for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
doctest = false

[dependencies]
const-random.workspace = true
ocaml-gen-derive = { path = "./derive" }
ocaml.workspace = true
paste.workspace = true

[features]
without-ocamlopt = [
  "ocaml/without-ocamlopt",
]
