[package]
name = "ocaml-gen"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
doctest = false

[dependencies]
const-random.workspace = true
# Maintain the same version as ocaml-gen
ocaml-gen-derive = { path = "./derive", version = "1.0.0" }
ocaml.workspace = true
paste.workspace = true

[features]
without-ocamlopt = [
  "ocaml/without-ocamlopt",
]
