[package]
name = "ocaml-gen-derive"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "The inner library of ocaml-gen, for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
convert_case = "0.6.0"
