[package]
name = "ocaml-gen-derive"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
description = "The inner library of ocaml-gen, for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
proc-macro = true
doctest = false

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
