[package]
name = "ocaml-gen-derive"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "The inner library of ocaml-gen, for generating OCaml code"
repository = "https://github.com/o1-labs/ocaml-gen"

[lib]
proc-macro = true
doctest = false
# Important: do not ask to build a dynamic library.
# On MacOS arm64, ocaml-rs.v0.2.2 causes build issues.
crate-type = ["lib", "staticlib"]

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
