[package]
name = "ocamlgen-test-stubs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
ocaml = "1.3.0"
ocaml-gen = { path = "../../ocaml-gen" }
ocaml-gen-derive = { path = "../../ocaml-gen/derive" }
